[tool.poetry]
name = "hexlet_code"
version = "0.1.9"
description = "The math games"
authors = ["Stas Kutsakov <skutsakov@gmail.com>"]
repository = "https://github.com/StasKutsakov/python-project-lvl1"
packages = [
  { include = "brain_games" },
]
classifiers = [
  "Topic :: Education"
]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gsd = "brain_games.scripts.brain_gsd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"
